add_library( opgen-gradient

   P1ToP2ElementwiseGradientAnnulusMap_0_0.cpp
   P1ToP2ElementwiseGradientAnnulusMap_0_0.hpp
   P1ToP2ElementwiseGradientAnnulusMap_1_0.cpp
   P1ToP2ElementwiseGradientAnnulusMap_1_0.hpp
   P1ToP2ElementwiseGradientIcosahedralShellMap_0_0.cpp
   P1ToP2ElementwiseGradientIcosahedralShellMap_0_0.hpp
   P1ToP2ElementwiseGradientIcosahedralShellMap_1_0.cpp
   P1ToP2ElementwiseGradientIcosahedralShellMap_1_0.hpp
   P1ToP2ElementwiseGradientIcosahedralShellMap_2_0.cpp
   P1ToP2ElementwiseGradientIcosahedralShellMap_2_0.hpp
   P1ToP2ElementwiseGradient_0_0.cpp
   P1ToP2ElementwiseGradient_0_0.hpp
   P1ToP2ElementwiseGradient_1_0.cpp
   P1ToP2ElementwiseGradient_1_0.hpp
   P1ToP2ElementwiseGradient_2_0.cpp
   P1ToP2ElementwiseGradient_2_0.hpp
   P1ToP2VectorElementwiseGradient.cpp
   P1ToP2VectorElementwiseGradient.hpp
   P1ToP2VectorElementwiseGradientAnnulusMap.cpp
   P1ToP2VectorElementwiseGradientAnnulusMap.hpp
   P1ToP2VectorElementwiseGradientIcosahedralShellMap.cpp
   P1ToP2VectorElementwiseGradientIcosahedralShellMap.hpp
   P1ToP2VectorElementwiseGradientParametricP2Map.cpp
   P1ToP2VectorElementwiseGradientParametricP2Map.hpp
   P1ToP2VectorElementwiseGradientRotationAnnulusMap.cpp
   P1ToP2VectorElementwiseGradientRotationAnnulusMap.hpp
   P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap.cpp
   P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap.hpp
)
target_link_libraries( opgen-gradient PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-gradient PRIVATE

      avx/P1ToP2ElementwiseGradientAnnulusMap_0_0_applyScaled_P1ToP2ElementwiseGradientAnnulusMap_0_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradientAnnulusMap_1_0_applyScaled_P1ToP2ElementwiseGradientAnnulusMap_1_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradient_0_0_applyScaled_P1ToP2ElementwiseGradient_0_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradient_0_0_applyScaled_P1ToP2ElementwiseGradient_0_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradient_1_0_applyScaled_P1ToP2ElementwiseGradient_1_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradient_1_0_applyScaled_P1ToP2ElementwiseGradient_1_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradient_2_0_applyScaled_P1ToP2ElementwiseGradient_2_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradient_2_0_applyScaled_P1ToP2ElementwiseGradient_2_0_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradientAnnulusMap_applyScaled_P1ToP2VectorElementwiseGradientAnnulusMap_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradientIcosahedralShellMap_applyScaled_P1ToP2VectorElementwiseGradientIcosahedralShellMap_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradientParametricP2Map_applyScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradientParametricP2Map_applyScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradientRotationAnnulusMap_applyScaled_P1ToP2VectorElementwiseGradientRotationAnnulusMap_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_applyScaled_P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradient_applyScaled_P1ToP2VectorElementwiseGradient_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradient_applyScaled_P1ToP2VectorElementwiseGradient_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientAnnulusMap_0_0_toMatrixScaled_P1ToP2ElementwiseGradientAnnulusMap_0_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradientAnnulusMap_1_0_toMatrixScaled_P1ToP2ElementwiseGradientAnnulusMap_1_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_toMatrixScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_toMatrixScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_toMatrixScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_0_0_toMatrixScaled_P1ToP2ElementwiseGradient_0_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_0_0_toMatrixScaled_P1ToP2ElementwiseGradient_0_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_1_0_toMatrixScaled_P1ToP2ElementwiseGradient_1_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_1_0_toMatrixScaled_P1ToP2ElementwiseGradient_1_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_2_0_toMatrixScaled_P1ToP2ElementwiseGradient_2_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_2_0_toMatrixScaled_P1ToP2ElementwiseGradient_2_0_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientAnnulusMap_toMatrixScaled_P1ToP2VectorElementwiseGradientAnnulusMap_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientIcosahedralShellMap_toMatrixScaled_P1ToP2VectorElementwiseGradientIcosahedralShellMap_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientParametricP2Map_toMatrixScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientParametricP2Map_toMatrixScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientRotationAnnulusMap_toMatrixScaled_P1ToP2VectorElementwiseGradientRotationAnnulusMap_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_toMatrixScaled_P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradient_toMatrixScaled_P1ToP2VectorElementwiseGradient_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradient_toMatrixScaled_P1ToP2VectorElementwiseGradient_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P1ToP2ElementwiseGradientAnnulusMap_0_0_applyScaled_P1ToP2ElementwiseGradientAnnulusMap_0_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradientAnnulusMap_1_0_applyScaled_P1ToP2ElementwiseGradientAnnulusMap_1_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradient_0_0_applyScaled_P1ToP2ElementwiseGradient_0_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradient_0_0_applyScaled_P1ToP2ElementwiseGradient_0_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradient_1_0_applyScaled_P1ToP2ElementwiseGradient_1_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradient_1_0_applyScaled_P1ToP2ElementwiseGradient_1_0_macro_3D.cpp
      avx/P1ToP2ElementwiseGradient_2_0_applyScaled_P1ToP2ElementwiseGradient_2_0_macro_2D.cpp
      avx/P1ToP2ElementwiseGradient_2_0_applyScaled_P1ToP2ElementwiseGradient_2_0_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradientAnnulusMap_applyScaled_P1ToP2VectorElementwiseGradientAnnulusMap_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradientIcosahedralShellMap_applyScaled_P1ToP2VectorElementwiseGradientIcosahedralShellMap_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradientParametricP2Map_applyScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradientParametricP2Map_applyScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradientRotationAnnulusMap_applyScaled_P1ToP2VectorElementwiseGradientRotationAnnulusMap_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_applyScaled_P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_macro_3D.cpp
      avx/P1ToP2VectorElementwiseGradient_applyScaled_P1ToP2VectorElementwiseGradient_macro_2D.cpp
      avx/P1ToP2VectorElementwiseGradient_applyScaled_P1ToP2VectorElementwiseGradient_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-gradient PRIVATE

      noarch/P1ToP2ElementwiseGradientAnnulusMap_0_0_applyScaled_P1ToP2ElementwiseGradientAnnulusMap_0_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradientAnnulusMap_0_0_toMatrixScaled_P1ToP2ElementwiseGradientAnnulusMap_0_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradientAnnulusMap_1_0_applyScaled_P1ToP2ElementwiseGradientAnnulusMap_1_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradientAnnulusMap_1_0_toMatrixScaled_P1ToP2ElementwiseGradientAnnulusMap_1_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_toMatrixScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_toMatrixScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_applyScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_toMatrixScaled_P1ToP2ElementwiseGradientIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_0_0_applyScaled_P1ToP2ElementwiseGradient_0_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_0_0_applyScaled_P1ToP2ElementwiseGradient_0_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_0_0_toMatrixScaled_P1ToP2ElementwiseGradient_0_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_0_0_toMatrixScaled_P1ToP2ElementwiseGradient_0_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_1_0_applyScaled_P1ToP2ElementwiseGradient_1_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_1_0_applyScaled_P1ToP2ElementwiseGradient_1_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_1_0_toMatrixScaled_P1ToP2ElementwiseGradient_1_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_1_0_toMatrixScaled_P1ToP2ElementwiseGradient_1_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_2_0_applyScaled_P1ToP2ElementwiseGradient_2_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_2_0_applyScaled_P1ToP2ElementwiseGradient_2_0_macro_3D.cpp
      noarch/P1ToP2ElementwiseGradient_2_0_toMatrixScaled_P1ToP2ElementwiseGradient_2_0_macro_2D.cpp
      noarch/P1ToP2ElementwiseGradient_2_0_toMatrixScaled_P1ToP2ElementwiseGradient_2_0_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientAnnulusMap_applyScaled_P1ToP2VectorElementwiseGradientAnnulusMap_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientAnnulusMap_toMatrixScaled_P1ToP2VectorElementwiseGradientAnnulusMap_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientIcosahedralShellMap_applyScaled_P1ToP2VectorElementwiseGradientIcosahedralShellMap_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientIcosahedralShellMap_toMatrixScaled_P1ToP2VectorElementwiseGradientIcosahedralShellMap_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientParametricP2Map_applyScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientParametricP2Map_applyScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientParametricP2Map_toMatrixScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientParametricP2Map_toMatrixScaled_P1ToP2VectorElementwiseGradientParametricP2Map_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientRotationAnnulusMap_applyScaled_P1ToP2VectorElementwiseGradientRotationAnnulusMap_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientRotationAnnulusMap_toMatrixScaled_P1ToP2VectorElementwiseGradientRotationAnnulusMap_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_applyScaled_P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_toMatrixScaled_P1ToP2VectorElementwiseGradientRotationIcosahedralShellMap_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradient_applyScaled_P1ToP2VectorElementwiseGradient_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradient_applyScaled_P1ToP2VectorElementwiseGradient_macro_3D.cpp
      noarch/P1ToP2VectorElementwiseGradient_toMatrixScaled_P1ToP2VectorElementwiseGradient_macro_2D.cpp
      noarch/P1ToP2VectorElementwiseGradient_toMatrixScaled_P1ToP2VectorElementwiseGradient_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-gradient PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-gradient PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-gradient PUBLIC cxx_std_17)
endif ()
